syntax = "proto3";

package RequestStreamTestService;

service RequestStreamTest {
  rpc requestStream(stream TestRequest) returns (TestReply) {}
}

message TestRequest {
  string message = 1;
}

message TestReply {
  string message = 1;
  string metadata = 2;
}
